; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_virtio_net_tap.c_pci_vtnet_neg_features.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_virtio_net_tap.c_pci_vtnet_neg_features.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_vtnet_softc = type { i32, i32, i64 }

@VIRTIO_NET_F_MRG_RXBUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @pci_vtnet_neg_features to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pci_vtnet_neg_features(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_vtnet_softc*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.pci_vtnet_softc*
  store %struct.pci_vtnet_softc* %7, %struct.pci_vtnet_softc** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.pci_vtnet_softc*, %struct.pci_vtnet_softc** %5, align 8
  %10 = getelementptr inbounds %struct.pci_vtnet_softc, %struct.pci_vtnet_softc* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.pci_vtnet_softc*, %struct.pci_vtnet_softc** %5, align 8
  %12 = getelementptr inbounds %struct.pci_vtnet_softc, %struct.pci_vtnet_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @VIRTIO_NET_F_MRG_RXBUF, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %24, label %17

17:                                               ; preds = %2
  %18 = load %struct.pci_vtnet_softc*, %struct.pci_vtnet_softc** %5, align 8
  %19 = getelementptr inbounds %struct.pci_vtnet_softc, %struct.pci_vtnet_softc* %18, i32 0, i32 2
  store i64 0, i64* %19, align 8
  %20 = load %struct.pci_vtnet_softc*, %struct.pci_vtnet_softc** %5, align 8
  %21 = getelementptr inbounds %struct.pci_vtnet_softc, %struct.pci_vtnet_softc* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = sub nsw i32 %22, 2
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %17, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
